Bug 282721 - no filtering on sent mails
Summary: no filtering on sent mails
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 284988 286058 287733 288496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-25 00:17 UTC by Wolfgang Rohdewald
Modified: 2012-03-23 09:11 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Rohdewald 2011-09-25 00:17:02 UTC
Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

since I migrated to kmail2, no filter works on sent mails. Used to work for the last few years. The Filter Log Viewer shows no activities at all. It does not matter if I apply the filter before or after sending.

Reproducible: Always

Steps to Reproduce:
define a filter. On the advanced tab, "Apply this filter to sent messages". I can manually execute this filter using the Apply Filter submenu on the message or from the Toolbar. When I apply all filters (CTRL-J), this filter is not executed and does not appear in the Filter Log Viewer. All other filters for incoming mails are in the Filter Log Viewer however.

starting kmail from command line shows no relevant messages.

Actual Results:  
filter not executed

Expected Results:  
filter should execute

OS: Linux (x86_64) release 3.0.0-11-generic
Compiler: gcc

this is the filter - for testing I moved it to the first position. I currently have 99 filters. I also stopped kmail, edited kmail2rc and set Applicability=1 and restarted kmail. Did not help. I also removed all other filters, leaving only this one. Did not help.

[Filter #0]
Applicability=0
AutomaticName=true
ConfigureShortcut=true
ConfigureToolbar=true
Icon=video-television
Shortcut=F12
StopProcessingHere=false
ToolbarName=Aufwand test
accounts-set=
action-args-0=/usr/local/bin/mailaufwand.py 2>>/home/wr/tmp/log.wr
action-name-0=filter app
actions=1
apply-on=before-send-mail,send-mail
contentsA=somedomain.com
fieldA=<recipients>
funcA=contains
name=Aufwand test
operator=or
rules=1
Comment 1 Ralph Müller-Welt 2011-10-15 20:07:50 UTC
I tried to set filter to outgoing mail too.

but i can confirm no filter ist used for outgoing mail.
Comment 2 Ralph Müller-Welt 2011-10-15 20:12:22 UTC
Confimed on
$ kmail --version
Qt: 4.7.4
KDE: 4.7.1 (4.7.1)
KMail: 4.7.2

No filters are applied to outgoing mail.
Comment 3 Laurent Montel 2011-10-16 17:33:15 UTC
I confirm it.
We don't re-adapt filter agent to apply filters in send mail.
Will look at how to do it.
Comment 4 Laurent Montel 2011-10-26 12:03:47 UTC
*** Bug 284988 has been marked as a duplicate of this bug. ***
Comment 5 Laurent Montel 2011-11-08 07:34:09 UTC
*** Bug 286058 has been marked as a duplicate of this bug. ***
Comment 6 Laurent Montel 2011-11-28 11:21:43 UTC
*** Bug 287733 has been marked as a duplicate of this bug. ***
Comment 7 András Manţia 2011-12-08 19:55:12 UTC
*** Bug 288496 has been marked as a duplicate of this bug. ***
Comment 8 Laurent Montel 2011-12-14 20:24:38 UTC
Git commit 5b89c364488f057d0c44880ee9bd3dbe9f5460fd by Montel Laurent.
Committed on 14/12/2011 at 21:24.
Pushed by mlaurent into branch 'master'.

Start to fix Bug 282721 - no filtering on sent mails

BUG: 282721
FIXED-IN: 4.8

M  +31   -0    agents/maildispatcher/sendjob.cpp

http://commits.kde.org/kdepim-runtime/5b89c364488f057d0c44880ee9bd3dbe9f5460fd
Comment 9 Daniel Moyne 2012-03-23 09:11:19 UTC
bug still on on 4.8.1

What is the signification of "apply filter before sending mai"l?