Start to fix Bug 282721 - no filtering on sent mails

BUG: 282721
FIXED-IN: 4.8